--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "concurrently": "^8.0.1",
     "cookie-parser": "^1.4.6",
     "datauri": "^4.1.0",
-    "dayjs": "^1.11.7",
+    "dayjs": "^1.11.10",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
@@ -35,6 +35,7 @@
     "multer": "^1.4.5-lts.1",
     "nanoid": "^4.0.2",
     "nodemon": "^2.0.22",
-    "react-toastify": "^9.1.2"
+    "react-toastify": "^9.1.2",
+    "recharts": "^2.10.3"
   }
 }
