--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@tanstack/react-query": "^4.29.5",
+    "@tanstack/react-query-devtools": "^4.29.6",
     "axios": "^1.3.6",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.41.1",
@@ -38,5 +40,8 @@
     "nodemon": "^2.0.22",
     "react-toastify": "^9.1.2",
     "recharts": "^2.10.3"
+  },
+  "devDependencies": {
+    "react-devtools": "^5.0.0"
   }
 }
